--- a/templates/home.html
+++ b/templates/home.html
@@ -3,11 +3,10 @@
 <title>Home - ShibaNet</title>
 <script>
     var sortBy = '{{ request.args["sort"] }}';
-	var user = '';
 </script>
 
 <h6>Sort by: 
-	<a href="/?sort=Following">Following</a> 
+	<a href="/?sort=Following" title="Show posts from people you follow">Following</a> 
 	<a href="/?sort=All">All</a> 
 </h6>
 
