--- a/templates/post/submit.html
+++ b/templates/post/submit.html
@@ -53,7 +53,7 @@
 <script>
 	function OnSubmit(el) {
 		el.disabled=true;
-		el.value='Sending…';
+		el.value='Sending...';
 		el.form.submit();
 	}
 </script>
