--- a/templates/post/view.html
+++ b/templates/post/view.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <title>{{ post["title"] }} - ShibaNet</title>
+<meta name="description" content="{{ post['bio']|e }}">
 <meta name="author" content="{{ post['author'] }}">
 
 <h2>{{ post["title"]|e|mentions|markdown }}</h2>
