--- a/templates/post/view.html
+++ b/templates/post/view.html
@@ -28,7 +28,7 @@
 		</a>
 	</h6>
     <div>
-		{{ cmt["body"]|e|markdown }}
+		{{ cmt["body"]|e|mentions|markdown }}
 
 		{% include 'post/cmt_buttons.html' %}
 
