--- a/templates/base.html
+++ b/templates/base.html
@@ -28,14 +28,16 @@
 
 {% if not hidenav %}
 		<header>
-			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<nav class="navbar navbar-expand-md navbar-dark bg-dark">
 			  <div class="container-fluid">
 				<a class="navbar-brand" href="/">ShibaNet</a>
+
+
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<ul class="navbar-nav me-auto mb-lg-0">
 						<li class="nav-item">
 							<a class="nav-link" href="/"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a>
 						</li>
