--- a/templates/search.html
+++ b/templates/search.html
@@ -39,7 +39,7 @@
 		{% endfor %}
 	</div>
 	<div class="tab-pane fade" id="categories" role="tabpanel" aria-labelledby="categories-tab">
-		<h2>Found posts</h2>
+		<h2>Found categories</h2>
 		{% for category in categories %}
 			{{ category }}
 		{% endfor %}
