--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,12 @@
 							</li>
 						</ul>
 						<ul class="navbar-nav ml-auto">
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><span class="nav-text"><i class="fa fa-flask fa-lg" aria-hidden="true"></i> Experiments</span></a>
+								<ul class="dropdown-menu dropdown-menu-right right-align-profile bg-dark" aria-labelledby="navbarDropdownMenuLink">
+									<li><a class="nav-link" href="https://video.shibanet.repl.co" title="The YouTube replacement"><i class="fa fa-video-camera fa-lg" aria-hidden="true"></i> Video</a></li>
+								</ul>
+							</li>
 							{% if "username" in session %}
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><img class="rounded navbar-img" src="{{ session['username']|pfp }}" onerror="this.onerror=null; this.src='https://avatars.dicebear.com/api/jdenticon/{{ session['username'] }}.svg'" alt="User's pfp"><span class="nav-text"> {{ session["username"] }}</span></a>
