added a noscript warning for post loading

--- a/templates/post/template.html
+++ b/templates/post/template.html
@@ -1,4 +1,5 @@
 <div id="scroller">
+	<noscript><h3 style="text-align:center;">Loading posts requires javascript to be enabled!</h3></noscript>
 	<template id="post_template">
 		<div>
 			<hr>
