--- a/templates/auth/forgot.html
+++ b/templates/auth/forgot.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
+
+{% block title %}I forgor 💀 - {% endblock %}
+
 {% block content %}
-<title>I forgor 💀 - ShibaNet</title>
 <div class="centercontainer">
 	<div class="center">
 		<h3 style="text-align: center;">Oh no you forgor 💀</h3>
