--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
+
+{% block title %}Login - {% endblock %}
+
 {% block content %}
-<title>Login - ShibaNet</title>
 <div class="centercontainer">
 	<div class="center">
 		<h3 style="text-align: center;">Log in</h3>
