--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
+
+{% block title %}Register - {% endblock %}
+
 {% block content %}
-<title>Register - ShibaNet</title>
 <div class="centercontainer">
 	<div class="center">
 		<h3 style="text-align: center;">Register</h3>
