--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en-GB">
 	<head>
+		<title>{% block title %}{% endblock %}ShibaNet</title>
+		
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 		<link href="/static/css/style.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -28,7 +30,7 @@
 
 {% if not hidenav %}
 		<header>
-			<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+			<nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
 				<div class="container-fluid">
 					<a class="navbar-brand" href="/">ShibaNet</a>
 
@@ -66,6 +68,7 @@
 									<a class="nav-link" href={{ url_for("submit") }}><i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i> Post</a>
 									<a class="nav-link" href={{ url_for("user_settings") }}><i class="fa fa-cog fa-lg" aria-hidden="true"></i> Settings</a>
 									<div class="dropdown-divider"></div>
+									<a class="nav-link" href="/help"><i class="fa fa-info-circle fa-lg" aria-hidden="true"></i> Help</a>
 									<a class="nav-link" href="/logout" onclick="return confirm('Are you sure?')"><i class="fa fa-sign-out fa-lg" aria-hidden="true"></i> Logout</a>
 								</div>
 							</div>
@@ -82,6 +85,7 @@
 					</div>
 				</div>
 			</nav>
+			<br><br>
 		</header>
 {% endif %}
 		<div class="main">
