--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
+
+{% block title %}Home - {% endblock %}
+
 {% block content %}
-<title>Home - ShibaNet</title>
 <script>
     var sortBy = '{{ request.args["sort"] }}';
 </script>
