--- a/templates/message.html
+++ b/templates/message.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
+
+{% block title %}{{ title }} - {% endblock %}
+
 {% block content %}
-<title>{{ title }} - ShibaNet</title>
 <div class="centercontainer">
 	<div class="center">
 		<h1 style="text-align: center;">{{ title }}</h1>
