--- a/templates/notif/view.html
+++ b/templates/notif/view.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
+
+{% block title %}Notification - {% endblock %}
+
 {% block content %}
-<title>Notification - ShibaNet</title>
 
 <h2>{{ notif["title"]|e|markdown }}</h2>
 
