--- a/templates/post/cmt_submit.html
+++ b/templates/post/cmt_submit.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
+
+{% block title %}Comment - {% endblock %}
+
 {% block content %}
-<title>Comment - ShibaNet</title>
 {% if ex_cmt %}
 <h2>Edit comment</h2><br>
 {% else %}
