--- a/templates/post/view.html
+++ b/templates/post/view.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+{% block title %}{{ post["title"] }} - {% endblock %}
+
 {% block content %}
 <title>{{ post["title"] }} - ShibaNet</title>
 <meta name="description" content="{{ post['bio']|e }}">
