--- a/templates/search.html
+++ b/templates/search.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
+
+{% block title %}Search - {% endblock %}
+
 {% block content %}
-<title>Search - ShibaNet</title>
 <script>
     var sortBy = 'searchPosts';
 	var search = '{{ request.args["q"] }}';
@@ -41,7 +43,13 @@
 	<div class="tab-pane fade" id="categories" role="tabpanel" aria-labelledby="categories-tab">
 		<h2>Found categories</h2>
 		{% for category in categories %}
-			{{ category }}
+		<hr>
+		<h3>
+			<a href='{{ url_for("view_category", category=category["_name"]) }}'>
+				<img src="{{ category['icon'] }}" onerror="this.onerror=null; this.src='http://www.rw-designer.com/icon-view/2048.png'" alt="Category icon" class="rounded" width="30px" height="30px">{{ category["_name"] }}
+			</a>
+		</h3>
+		<p>{{ category["description"]|e|truncate(75)|markdown }}</p>
 		{% endfor %}
 	</div>
 </div>
