--- a/templates/user/settings.html
+++ b/templates/user/settings.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
+
+{% block title %}Settings - {% endblock %}
+
 {% block content %}
-<title>Settings - ShibaNet</title>
 <h2>User settings</h2><br>
 {% if error %}
 <div class="alert alert-danger" role="alert">{{ error }}</div>
