--- a/templates/user/view.html
+++ b/templates/user/view.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
+
+{% block title %}{{ user["name"] }} - {% endblock %}
+
 {% block content %}
-<title>{{ user["name"] }} - ShibaNet</title>
 <meta name="description" content="{{ user['bio']|e }}">
 
 <script>
@@ -48,7 +50,7 @@
 		<h4><a href={{ url_for("view_comment", cmt_id=cmt["_id"]) }}>Replying to "{{ cmt|getparenttitle|truncate(20) }}"</a></h4>
 
 		<div class="text_post">
-			{{ cmt["body"]|e|markdown }}
+			{{ cmt["body"]|e|mentions|markdown }}
 		</div>
 
 		{% include 'post/cmt_buttons.html' %}
