--- a/templates/post/template.html
+++ b/templates/post/template.html
@@ -28,3 +28,5 @@
 <div class="d-flex justify-content-center mb-3" id="sentinel">
     <div class="spinner-border" role="status"></div>
 </div>
+
+{% block script %}<script type="text/javascript" src="/static/js/lazyload.js" defer></script>{% endblock %}
