fixed more bugs and improved help menu

--- a/templates/help.html
+++ b/templates/help.html
@@ -3,7 +3,12 @@
 {% block title %}Help - {% endblock %}
 
 {% block content %}
-<h3>Submit feedback</h3>
+<br>
+<h3>Got a problem? Don't worry, we've got you!</h3>
+
+<p>If you don't know how to do something on ShibaNet, go check out <a href="/u/ShibaNet_Tutorials">ShibaNet Tutorials</a>! If they don't have a tutorial, ask them for one in the comments or just tag <a href="/u/ShibaNet_Tutorials">@ShibaNet Tutorials</a></p>
+
+<h3>Feedback/Help form</h3>
 
 <form action="{{ url_for('help') }}" method="POST" class="form-signin">
 	<div class="form-group">
