home page visual fixes

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,9 @@
 		<header>
 			<nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
 				<div class="container-fluid">
-					<a class="navbar-brand" href="/">ShibaNet</a>
+					<a class="navbar-brand" href="/">
+						<img src="static/icons/favicon.ico" alt="User's pfp" class="rounded" width="30px" height="30px"> ShibaNet
+					</a>
 
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -49,7 +51,7 @@
 							<div class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-flask fa-lg" aria-hidden="true"></i><span class="nav-text"> Experiments</span></a>
 								<div class="dropdown-menu bg-dark dropdown-menu-right right-align-profile p-4 text-muted">
-									<h6 class="dropdown-header">Expermiental apps</h6>
+									<h6 class="dropdown-header">Experimental apps</h6>
 									<a class="nav-link" href="https://video.shibanet.repl.co" title="The YouTube replacement"><i class="fa fa-video-camera fa-lg" aria-hidden="true"></i> Video</a>
 								</div>
 							</div>
