--- a/templates/post/template.html
+++ b/templates/post/template.html
@@ -4,7 +4,7 @@
 		<div>
 			<hr>
 			<h4><a id="title" href="/post/000000"></a></h4>
-			<h6>Posted by <a id="author" href="/u/me"></a><span id="isCategory"> in <a id="category" href="/u/me"></a></span></h6>
+			<h6>Posted by <a id="author" href="/u/me"></a><span id="isCategory"> <a id="category" href="/c/shibanet"></a></span></h6>
 			<div id="body"></div>
 
 			{% if "username" in session %}
