--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 			<nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
 				<div class="container-fluid">
 					<a class="navbar-brand" href="/">
-						<img src="static/icons/favicon.ico" alt="User's pfp" class="rounded" width="30px" height="30px"> ShibaNet
+						<img src="/static/icons/favicon.ico" alt="" class="rounded" width="30px" height="30px"> ShibaNet
 					</a>
 
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
