--- a/templates/user/view.html
+++ b/templates/user/view.html
@@ -10,7 +10,7 @@
 	var user = "{{ user['name'] }}";
 </script>
 
-<img src="{{ user['pfp'] }}" onerror="this.onerror=null; this.src='https://avatars.dicebear.com/api/jdenticon/{{ user['name'] }}.svg'" alt="" class="rounded" width="100px" height="100px">
+<img src="{{ user['name']|pfp }}" alt="" class="rounded" width="100px" height="100px">
 <h2>{{ user["name"] }}</h2>
 <div class="pull-right">
 	{% if friends %}
